Fixing issue #24 and misc whitespace issues

--- a/utilities/_u-link-disguised.scss
+++ b/utilities/_u-link-disguised.scss
@@ -20,7 +20,7 @@
 $u-link-disguised-apply-at-breakpoints:         $default-breakpoints !default;
 
 // From above choose to turn this on or off
-$u-link-disguised-apply-at-breakpoints-toggle:  true !default;
+$u-link-disguised-apply-at-breakpoints-toggle:  false !default;
 
 
 %u-link-disguised,
